# rinha-backend-2026

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  info.json
.github/workflows/: docker.yml
resources/: README.md
src/: distance.rs  index.rs  lib.rs  net.rs  parser.rs  responses.rs  vectorizer.rs
test/: README.md  accuracy.py
